--- a/sucursales.html
+++ b/sucursales.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=">
-    <title>Soy la página de sucursales    </title>
+    <link rel="stylesheet" href="estilo.css"
+    <title>Sucursales    </title>
 </head>
-<body>
-    
+<body class="Sucursal">
+    <h1>Soy la pagina de sucursales</h1>
 </body>
 </html>
