anclamos la pagina de sucursales al index

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ p {color: blue;} /*Le doy estilo a todo lo que tenga el tag P*/
     <ul><!--Lista desordenada de cosas (indice)-->
 <li>Home<!--Elementos de la lista--> </li>  
 <li>Ventas<!--Elementos de la lista--> </li>  
+<li>Sucursales<!--Elementos de la lista--> </li>  
     </ul>
     
     </nav>
@@ -50,8 +51,8 @@ p {color: blue;} /*Le doy estilo a todo lo que tenga el tag P*/
         <!--El atributo HREF contiene la URL a la que deseamos enlazar -->
          </p> 
         <br> <!-- Salto de pagina -->
-    <p> <a href= "paginas/Ventas.html"> <u>Ventas</u> </a> 
-        </p>    
+    <p> <a href= "paginas/Ventas.html"> <u>Ventas</u> </a>  </p>    
+    <p> <a href= "paginas/sucursales.html"> <u>Sucursales</u> </a>  </p>    
      
     <hr> <!-- El elemento HR marca una línea y contiene diversos atributos-->
 <hr align="center"> <!-- El atributo ALIGN establece la regla de alineación de la
